--- a/style2.css
+++ b/style2.css
@@ -1,4 +1,4 @@
-body{
+body {
     background-image: url('Fond.png');
     font-family: Arial;
 }
@@ -12,10 +12,14 @@ body>header{
     width:80em;
     margin:0 auto 2em auto;    
     padding:0;
+    border-radius: 50px;
 
 }
 body>header img{
+    background-image: url(logo.png);
+    border-style: solid;
     height:5em;
+    border-radius: 50%;
 }
 body>header #menu {
     display:flex;
